--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,245 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+* {
+  box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+html {
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  margin: 0;
+  /* background-color: #333236; */
+  background: linear-gradient(#121214, #272629);
+  color: #d0cfd6;
+  min-height: 100vh;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+h1 {
+  font-size: 2rem;
+  text-align: center;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+#auth-form {
+  width: 90%;
+  max-width: 40rem;
+  border-radius: 6px;
+  padding: 3rem 4rem;
+  margin: 5rem auto;
+  background-color: #b8b4c3;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
+}
+
+#auth-form img {
+  display: block;
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
+  margin: 1rem auto;
+  filter: drop-shadow(0 0 6px rgba(30, 30, 32, 0.3));
+}
+
+#auth-form label {
+  display: block;
+  margin-bottom: 0.15rem;
+  font-weight: bold;
+  color: #46454a;
+}
+
+#auth-form input {
+  font: inherit;
+  width: 100%;
+  padding: 0.5rem;
+  border-radius: 3px;
+  border: none;
+  background-color: #d9d7df;
+  color: #46454a;
+}
+
+#auth-form button {
+  width: 100%;
+  font: inherit;
+  cursor: pointer;
+  padding: 0.5rem 1.5rem;
+  border: none;
+  background-color: #4b34a9;
+  color: #d0cfd6;
+  border-radius: 3px;
+}
+
+#auth-form button:hover,
+#auth-form button:active {
+  background-color: #432aa3;
+}
+
+#auth-form a {
+  color: #564f6e;
+  text-decoration: none;
+  display: block;
+  margin: 1rem 0;
+  text-align: center;
+}
+
+#auth-form a:hover {
+  color: #4b34a9;
+}
+
+#form-errors {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: #a21d4c;
+}
+
+#auth-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 50rem;
+  margin: 2rem auto;
+}
+
+#auth-header p {
+  font-size: 1.25rem;
+}
+
+#auth-header button {
+  font: inherit;
+  cursor: pointer;
+  padding: 0.5rem 1.5rem;
+  border: none;
+  background-color: #6f34a9;
+  color: #d0cfd6;
+  border-radius: 3px;
+}
+
+#auth-header button:hover,
+#auth-header button:active {
+  background-color: #5f2a8a;
+}
+
+main {
+  max-width: 50rem;
+  margin: 2rem auto;
+}
+.dashboard-container {
+  display: flex;
+  height: 100vh;
+}
+
+.sidebar {
+  width: 250px;
+  box-shadow: 0 4px 8px rgba(194, 154, 79, 0.1); /* Added shadow for 3D effect */
+  z-index: 1;
+  border-right: 2px solid #fff;
+  padding: 10px;
+  position: relative;
+}
+
+.sidebar-header {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 20px;
+ /*  color:#fff; */
+}
+
+.sidebar-menu {
+  list-style: none;
+  padding: 0;
+}
+
+.sidebar-item {
+  display: flex;
+  align-items: center;
+  padding: 10px 0;
+  cursor: pointer;
+}
+
+.sidebar-item.active, .sidebar-item:hover {
+  background-color: rgb(201, 94, 94);
+}
+
+.sidebar-item svg {
+  margin-right: 10px;
+}
+
+.main-content {
+  flex-grow: 1;
+ /*  background-color: #fff; */
+  padding: 20px;
+}
+
+.orders-container {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.orders-container h2 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.orders-buttons {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.orders-button {
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  background-color: #ddd;
+  margin-right: 10px;
+}
+
+.orders-button.active {
+  background-color: rgb(201, 94, 94);
+  color: #fff;
+}
+
+.orders-empty {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.orders-empty p {
+  margin: 10px 0;
+}
+
+.orders-icon {
+  font-size: 50px;
+  color:  rgb(201, 94, 94);
+  margin-bottom: 20px;
+}
+
+.shopping-button {
+  padding: 10px 20px;
+  border: none;
+  background-color: rgb(201, 94, 94);
+  color: #fff;
+  cursor: pointer;
+  margin-top: 20px;
+}
+.sidebar-logout {
+  display: flex;
+  align-items: center;
+  padding: 10px 0;
+  cursor: pointer;
+  color:#fff;
+}
+
+.sidebar-logout:hover {
+  background-color: rgb(201, 94, 94);
+}
+
+.sidebar-logout svg {
+  margin-right: 10px;
 }
